--- a/src/app/employee-dashboard/layout/employee-layout/employee-layout.component.html
+++ b/src/app/employee-dashboard/layout/employee-layout/employee-layout.component.html
@@ -1,1 +1,4 @@
-<router-outlet />
+<div class="bg-surface-900 min-h-screen">
+  <app-nav [title]="'Boardly'" [description]="'Empleado Dashboard'" [profileId]="id" />
+  <router-outlet />
+</div>
