--- a/src/app/shared/components/filter-card/filter-card.component.html
+++ b/src/app/shared/components/filter-card/filter-card.component.html
@@ -14,10 +14,12 @@
     </h2>
   </div>
 
+  @if (rol) {
+
   <div class="flex items-center space-x-2">
     <a [routerLink]="buttonRoute()" class="group bg-gradient-to-r from-accent via-primary to-secondary text-white py-2.5 px-6 rounded-xl font-semibold
-      hover:shadow-xl hover:shadow-accent/25 transition-all duration-300 flex items-center space-x-2 transform
-      hover:scale-[1.02] hover:-translate-y-0.5">
+        hover:shadow-xl hover:shadow-accent/25 transition-all duration-300 flex items-center space-x-2 transform
+        hover:scale-[1.02] hover:-translate-y-0.5">
       <svg class="w-4 h-4 transition-transform group-hover:rotate-12" fill="none" stroke="currentColor"
         viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
@@ -30,6 +32,7 @@
       {{projects()}} proyectos activos
     </span>
   </div>
+  }
 </div>
 
 <div class="flex flex-wrap gap-3">
