--- a/src/app/board/pages/create-task/create-task.component.html
+++ b/src/app/board/pages/create-task/create-task.component.html
@@ -1,5 +1,9 @@
 <body class="bg-gradient-to-br from-surface-950 via-surface-900 to-surface-950 min-h-screen font-sans antialiased">
 
+  @if (isLoading()) {
+  <app-spinner title="Creando una nueva tarea..." />
+  }
+
   <div class="max-w-5xl mx-auto px-4 sm:px-6 py-8">
 
     <div
